////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//
// © 2011-2021 Telenav, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

package com.telenav.aonia.map.ui.swing.debug.viewer;

import com.telenav.aonia.map.ui.swing.debug.View;
import com.telenav.aonia.map.ui.swing.debug.Viewer;

import java.util.ArrayList;
import java.util.Collection;
import java.util.List;

public abstract class BaseViewer implements Viewer
{
    private final List<View> views = new ArrayList<>();

    @Override
    public View view(final String name)
    {
        for (final var view : views)
        {
            if (view.name().equals(name))
            {
                return view;
            }
        }
        final var view = newView(name);
        views.add(view);
        return view;
    }

    @Override
    public Collection<View> views()
    {
        return views;
    }

    protected abstract View newView(String name);
}
