////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//
// © 2011-2021 Telenav, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

package com.telenav.aonia.map.ui.swing.debug.viewer.swing;

import com.telenav.aonia.map.ui.swing.debug.InteractiveView;
import com.telenav.aonia.map.ui.swing.debug.viewer.BaseViewer;

import javax.swing.JFrame;

public class SwingViewer extends BaseViewer
{
    @Override
    protected InteractiveView newView(final String name)
    {
        // Create view panel
        final var view = new SwingViewPanel();
        view.setName(name);

        // Add to JFrame
        final var frame = new JFrame(name);
        frame.setContentPane(view);
        frame.pack();
        frame.setVisible(true);

        // Return view panel
        return view;
    }
}
